--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build:ghpages": "ng build --prod --base-href \"https://angelitaooo.github.io/project1-meetup-angular\"",
+    "build:ghpages": "ng build --prod --base-href https://angelitaooo.github.io/project1-meetup-angular/",
     "deploy": "npm run build:ghpages && angular-cli-ghpages"
   },
   "private": true,
